Janky fix for z-index bug blocking review button

--- a/fedireads/static/format.css
+++ b/fedireads/static/format.css
@@ -180,7 +180,7 @@ ul.menu a {
     flex-direction: column;
     padding-top: 70px;
     position: relative;
-    top: -50px;
+    top: -30px;
     z-index: 0;
 }
 
